# subprocess

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
doc/: completed-process.md  environment.md  exceptions.md  find-program.md  pipe-functions.md  pipe-option.md  popen.md  run-builder.md  run-options.md  run.md  signals.md  utilities.md
subproc/: subproc.hpp
subprocess/: CMakeLists.txt  cmake_install.cmake  subprocess.h  subprocess.vcxproj  subprocess.vcxproj.filters
subprocess/subprocess/: basic_types.hpp  builder.cpp  builder.h  builder_windows.cpp  environ.cpp  environ.h  pipe.cpp  pipe.h  pipevar.hpp  shellutils.cpp  shellutils.h  utf8_to_utf16.cpp  utf8_to_utf16.h
test/: CMakeLists.txt  basic_test.cpp  basic_test.vcxproj  basic_test.vcxproj.filters  cat.vcxproj  cat.vcxproj.filters  cat_child.cpp  cmake_install.cmake  echo.vcxproj  echo.vcxproj.filters  echo_main.cpp  examples.cpp  examples.vcxproj  examples.vcxproj.filters  printenv.vcxproj  printenv.vcxproj.filters  printenv_main.cpp  sleep.vcxproj  sleep.vcxproj.filters  sleep_main.cpp
